Guard JPMS probe against workaround flags (#391)